# AppScraper

./: .dockerignore  .replit  README.md  app.py  appscraper.db  database.db  index.html  nixpacks.toml  pyproject.toml  railway.json  railway.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  run.py  schema.py  scraper.py  setup.py  update_prices.py  utils.py  wsgi.py
app/components/: Ref.tsx
templates/: 404.html  500.html  index.html  login.html  register.html
